# Onyx

./: CMakeLists.txt  README.md  main.cpp  onyx.md  run_test.sh
src/: Transpiler.cpp  Transpiler.hpp
tests/: attributes.ox  hello.ox  pipes.ox  resolve.ox
